Fixed some padding issues on small screens

--- a/styles/Button.module.css
+++ b/styles/Button.module.css
@@ -36,3 +36,9 @@
 	background-color: #000;
 	color: #fff;
 }
+
+@media only screen and (max-width: 380px) {
+	.button1 {
+		margin: 0 3px 10px 3px;
+	}
+}
