--- a/styles/TextCard.module.css
+++ b/styles/TextCard.module.css
@@ -7,3 +7,9 @@
 	max-width: 600px;
 	align-self: center;
 }
+
+@media only screen and (max-width: 380px) {
+	.card {
+		width: 80%;
+	}
+}
